# kepler

./: .gitignore  .pdm-python  N-body simulation-oop.ipynb  N-body simulation.ipynb  Two-body simulation.ipynb  bodies_data.json  pyproject.toml  run_solar_system.py
data/: planets_data.json  planets_data_README.md
notebooks/: N-body simulation.ipynb  Two-body simulation.ipynb
src/: NumericalIntegrationMethods.py  SolarSystem.py  body.py  solar_system.py  strategies.py  system_interface.py  utils.py  visualization.py
