[tool.poetry]
name = "kepler"
version = "0.1.0"
description = ""
authors = ["Gabriele Orlandi <gabriele.orlandi@xtreamers.io>", "Fabio Lipreri <fabio.lipreri@xtreamers.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.8.0"
ipython = "^8.16.1"
ipympl = "^0.9.3"
scipy = "^1.11.3"
setuptools = "^68.2.2"
plotly = "^5.17.0"
pandas = "^2.1.1"
numpy = "^1.26.2"
jupyterlab = "^4.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

